flux-parser/tests/snapshots/expr__parse_basic_literals_b10_int.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 1
      span:
        range:
          start: 0
          end: 1
        file_id: 0
span:
  range:
    start: 0
    end: 1
  file_id: 0

