flux-parser/tests/snapshots/expr__parse_basic_literals_b16_int_sep.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 44031
      span:
        range:
          start: 0
          end: 8
        file_id: 0
span:
  range:
    start: 0
    end: 8
  file_id: 0

