flux-parser/tests/snapshots/expr__parse_basic_literals_b8_int.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  IntLit:
    negative:
      node: false
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    signed: true
    bits: 32
    val:
      node: 342391
      span:
        range:
          start: 0
          end: 9
        file_id: 0
span:
  range:
    start: 0
    end: 9
  file_id: 0

