flux-parser/tests/snapshots/expr__parse_binops_cmp_lt.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        FloatLit:
          negative:
            node: true
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          bits: 32
          val:
            node: 0.12
            span:
              range:
                start: 1
                end: 6
              file_id: 0
      span:
        range:
          start: 0
          end: 6
        file_id: 0
    op: CmpLT
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 7
                end: 8
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 1
            span:
              range:
                start: 7
                end: 8
              file_id: 0
      span:
        range:
          start: 7
          end: 8
        file_id: 0
span:
  range:
    start: 0
    end: 8
  file_id: 0

